# CurieReloaded

./: .gitignore  README.md
frontend/: App.tsx  metro.config.js  (+2 more)
rust-backend-curie/: Cargo.toml
rust-backend-curie/api/: Cargo.toml
rust-backend-curie/api/src/: auth_catchers.rs  catcher.rs  lib.rs  locations_routes.rs  reactivos_routes.rs  routes.rs  shared_routes.rs  usuarios_routes.rs
rust-backend-curie/auth/: Cargo.toml
rust-backend-curie/auth/src/: auth_service.rs  bcrypt_encoder.rs  jwt_service.rs  lib.rs
rust-backend-curie/database/: Cargo.toml  diesel.toml
rust-backend-curie/database/migrations/2025-02-01-103601_create_localizacion/: up.sql
rust-backend-curie/database/migrations/2025-02-01-103626_create_materiales/: down.sql  up.sql
rust-backend-curie/database/migrations/2025-02-01-103712_create_productos_auxiliares/: up.sql
rust-backend-curie/database/migrations/2025-02-01-103759_create_reactivos/: down.sql  up.sql
rust-backend-curie/database/migrations/2025-02-01-104412_create_ubicacion/: down.sql  up.sql
rust-backend-curie/database/migrations/2025-02-01-104445_create_riesgos/: down.sql  up.sql
rust-backend-curie/database/migrations/2025-02-01-104455_create_producto_riesgo/: up.sql
rust-backend-curie/database/migrations/2025-02-01-111634_create_password_reset_token/: down.sql
rust-backend-curie/database/migrations/2025-02-03-095852_create_usuario/: down.sql  up.sql
rust-backend-curie/database/src/: lib.rs  models.rs  schema.rs
rust-backend-curie/database/src/models/: auxiliares_models.rs  localizaciones_models.rs  materiales_models.rs  mod.rs  productos_models.rs  reactivos_models.rs  usuarios_models.rs
rust-backend-curie/migrations/2025-01-31-234010_create_productos/: up.sql
rust-backend-curie/migrations/2025-02-01-103601_create_localizacion/: down.sql
rust-backend-curie/migrations/2025-02-01-103712_create_productos_auxiliares/: down.sql  up.sql
rust-backend-curie/migrations/2025-02-01-103728_create_producto_riesgo/: down.sql  up.sql
rust-backend-curie/migrations/2025-02-01-103759_create_reactivos/: up.sql
rust-backend-curie/migrations/2025-02-01-111634_create_password_reset_token/: up.sql
rust-backend-curie/src/: lib.rs  main.rs
(+28 files in other folders)
