[package]
name = "rust-backend-curie"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "./database" }
api = { path = "./api" }
auth = { path = "./auth" }
serde_json = "1.0.138"

[workspace]
members = [
    "api",
    "auth",
    "database",
    # ... any other crates
]
resolver = "2"
